# vroom-vroom

./: CMakeLists.txt
src/core/: game.cpp  game.hpp  game_state.hpp  gsm.cpp  gsm.hpp
src/render/: render_context.cpp  render_context.hpp
src/states/: demo_state.cpp  demo_state.hpp
src/util/: event_handler.cpp  event_handler.hpp  logger.cpp  logger.hpp  singleton.hpp
